# Quant-Enthusiasts-Risk-Engine

./: Dockerfile  README.md  start.sh
cpp_engine/apps/: main.cpp
cpp_engine/libraries/qe_risk_engine/: CMakeLists.txt
cpp_engine/libraries/qe_risk_engine/includes/: LocalMarketDB.h  MarketData.h  RiskEngine.h
cpp_engine/libraries/qe_risk_engine/src/: LocalMarketDB.cpp  MarketData.cpp  RiskEngine.cpp
cpp_engine/tests/: CMakeLists.txt
cpp_engine/tests/src/: test_marketdata_cache.cpp  test_marketdata_integration.cpp
react-dashboard/: package-lock.json  package.json  sample.env  vite.config.ts
react-dashboard/src/: App.tsx  index.css
react-dashboard/src/components/Documentation/: DocumentationStyles.tsx
react-dashboard/src/components/Documentation/sections/: APISection.tsx  ArchitectureSection.tsx  RiskSection.tsx  index.ts
react-dashboard/src/components/Header/: Header.tsx
react-dashboard/src/components/MarketData/: MarketDataSection.tsx
react-dashboard/src/components/Portfolio/: InstrumentForm.tsx  PortfolioSection.tsx  PortfolioTable.tsx
react-dashboard/src/components/RiskAnalysis/: MetricCard.tsx  RiskAnalysisSection.tsx
react-dashboard/src/components/ui/: ErrorMessage.tsx
react-dashboard/src/config/: constants.ts
react-dashboard/src/data/: documentationSections.ts
react-dashboard/src/hooks/: useApiHealth.ts
react-dashboard/src/pages/: Dashboard.tsx
react-dashboard/src/services/: api.service.ts
react-dashboard/src/types/: index.ts
react-dashboard/src/utils/: helpers.ts
react_dashboard/: GETTING_STARTED.md  index.html  package-lock.json  package.json  sample.env  tailwind.config.js  tsconfig.json
react_dashboard/src/: App.tsx  index.css
react_dashboard/src/components/Documentation/sections/: DeploymentSection.tsx  MarketDataSection.tsx  OverviewSection.tsx  PricingSection.tsx  QuickStartSection.tsx  TroubleshootingSection.tsx
react_dashboard/src/components/Header/: Header.tsx
react_dashboard/src/components/Portfolio/: InstrumentForm.tsx  PortfolioSection.tsx  PortfolioTable.tsx
react_dashboard/src/components/RiskAnalysis/: RiskAnalysisSection.tsx
react_dashboard/src/components/common/: StatusIndicator.tsx
react_dashboard/src/components/ui/: GlassButton.tsx  Spinner.tsx  StatusIndicator.tsx
react_dashboard/src/config/: constants.ts
react_dashboard/src/hooks/: useApiHealth.ts  usePortfolio.ts
react_dashboard/src/pages/: Documentation.tsx
react_dashboard/src/types/: index.ts
